# ai_finance_ai

./: README.md  app.py  main.py  pyproject.toml
agent/: __init__.py  graph.py  llm_utils.py  mcp_client.py  react_agent.py  state.py
agent/nodes/: calculator_node.py  citation_guard_node.py  critic_node.py  final_answer_node.py  graph_rag_node.py  query_transform_node.py  reasoning_node.py  retrieval_node.py  router_node.py  web_search_node.py
agent/tools/: __init__.py  agent_tools.py  calculator_tools.py  finance_tools.py  middleware.py  retrieval_tools.py  web_tools.py
config/: agent.yaml  chroma.yaml  compliance.yaml  graph.yaml  logging.yaml  mcp.yaml  memory.yaml  model.yaml  prompts.yaml  rag.yaml
data/evaluation/: financial_agent_questions.csv
data/processed/: user_profiles.json
graph_rag/: __init__.py  entity_extractor.py  graph_retriever.py  graph_store.py  relation_extractor.py
ingestion/: __init__.py  chunk_cache.py  metadata_registry.py  pipeline.py  registry_sync.py  schema.py
ingestion/chunkers/: markdown_chunker.py  semantic_chunker.py  structure_chunker.py
ingestion/loaders/: image_loader.py  news_loader.py  pdf_loader.py  table_loader.py  text_loader.py
knowledge/: __init__.py  financial_knowledge.yaml  knowledge_loader.py
memory/: __init__.py  conversation_store.py  heartbeat.py  long_term.py  short_term.py  storage_backend.py  user_profile.py
model/: factory.py
prompts/: analyst_prompt.txt  citation_prompt.txt  critic_prompt.txt  hyde_prompt.txt  main_prompt.txt  query_rewrite_prompt.txt  rag_summarize.txt  report_prompt.txt  system_prompt.txt
rag/: bm25_store.py  citation.py  context_compressor.py  hybrid_retriever.py  query_filters.py  rag_service.py  reranker.py  vector_store.py
utils/: chinese_text.py  config_handler.py  file_handler.py  helpers.py  logger_handler.py  path_tool.py  progress.py  prompt_loader.py  test1.py
(+14 files in other folders)
