[project]
name = "ai-finance-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
