[project]
name = "ai-finance-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "jieba>=0.42.1",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "networkx>=3.6.1",
    "opencc-python-reimplemented>=0.1.7",
    "pdfplumber>=0.11.9",
    "pypdf>=6.12.2",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
